# group-chat-socket-C

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  a.out  main.c
server/: CMakeLists.txt  main.c  main.h
socketutil/: CMakeLists.txt  socketutil.c  socketutil.h
